--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pages.RegisterActivity"></activity>
-        <activity android:name=".pages.LoginActivity" />
+        <activity android:name=".pages.activity.RegisterActivity" />
+        <activity android:name=".pages.activity.LoginActivity" />
         <activity
-            android:name=".pages.MainActivity"
+            android:name=".pages.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
