--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pages.activity.UserDetailActivity">
-        </activity>
-        <activity android:name=".pages.activity.RegisterActivity"/>
-        <activity android:name=".pages.activity.LoginActivity"/>
+        <activity android:name=".pages.activity.UserDetailActivity" android:launchMode="singleInstance" android:label="详细信息"/>
+        <activity android:name=".pages.activity.RegisterActivity" android:launchMode="singleInstance" android:label="注册"/>
+        <activity android:name=".pages.activity.LoginActivity" android:launchMode="singleInstance" android:label="登录"/>
         <activity
             android:name=".pages.activity.MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
