--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pages.activity.UserDetailActivity" android:launchMode="singleInstance" android:label="详细信息"/>
-        <activity android:name=".pages.activity.RegisterActivity" android:launchMode="singleInstance" android:label="注册"/>
-        <activity android:name=".pages.activity.LoginActivity" android:launchMode="singleInstance" android:label="登录"/>
+        <activity android:name=".pages.activity.CreateBlogActivity" android:theme="@style/AppTheme.NoActionBar" android:launchMode="singleInstance"/>
+        <activity
+            android:name=".pages.activity.UserDetailActivity"
+            android:label="详细信息"
+            android:launchMode="singleInstance"/>
+        <activity
+            android:name=".pages.activity.RegisterActivity"
+            android:label="注册"
+            android:launchMode="singleInstance"/>
+        <activity
+            android:name=".pages.activity.LoginActivity"
+            android:label="登录"
+            android:launchMode="singleInstance"/>
         <activity
             android:name=".pages.activity.MainActivity"
             android:label="@string/app_name"
