--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
+    implementation 'pub.devrel:easypermissions:1.0.1'
+    implementation "androidx.exifinterface:exifinterface:1.1.0-beta01"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02"
 }
