--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02"
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-16'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-andx-16'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
 }
