--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-16'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-andx-16'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
