--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.41'
-    ext.plugin_version = "2.3.1"
+    ext.plugin_version = '3.1.4'
     repositories {
         google()
         jcenter()
