--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,14 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
+}
+
+kapt {
+    generateStubs = true
 }
 
 dependencies {
@@ -48,5 +56,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-
+    kapt "com.android.databinding:compiler:$plugin_version"
 }
