--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.zzhoujay.richtext:richtext:2.5.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     kapt "com.android.databinding:compiler:$plugin_version"
 }
