--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pages.activity.TopicChooseActivity" />
+        <activity android:name=".pages.activity.TopicChooseActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".pages.activity.UserInfoActivity"
             android:label="@string/title_activity_user_info"
