--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,15 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
-//apply plugin: "kotlin-kapt"
 
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
     defaultConfig {
         applicationId "tty.community"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -23,26 +21,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-//    dataBinding {
-//        enabled = true
-//    }
-
 }
 
-//kapt {
-//    generateStubs = true
-//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha03'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha01'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha02'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -58,5 +48,4 @@ dependencies {
     implementation 'com.zzhoujay.richtext:richtext:2.5.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
 
-//    kapt "com.android.databinding:compiler:$plugin_version"
 }
