--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
-    ext.plugin_version = '3.1.4'
     repositories {
         google()
         jcenter()
@@ -10,8 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.android.tools.build:gradle:$plugin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
