--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,14 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('keystore/TTY_TEST_KEY.jks')
+            storePassword '123456'
+            keyAlias = 'test0'
+            keyPassword '123456'
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
     defaultConfig {
