--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,23 +36,23 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
-    implementation 'com.google.android.material:material:1.1.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha03'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.2.0-beta02'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc02'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'pub.devrel:easypermissions:1.0.1'
-    implementation "androidx.exifinterface:exifinterface:1.1.0-beta01"
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02"
+    implementation "androidx.exifinterface:exifinterface:1.1.0-rc01"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha03"
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-16'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-andx-16'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.zzhoujay.richtext:richtext:2.5.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
 
